--- a/src/app/class/class.css
+++ b/src/app/class/class.css
@@ -10,7 +10,6 @@
 
 .class {
     margin-top: 10px;
-    width: 100%;
     padding: 10px;
 
     background: rgba(43, 125, 248, 0.272);
@@ -24,8 +23,14 @@
 
 .class h2 {
     font-family: QuickSandRegular;
+    font-size: 1rem;
+    font-weight: 100;
     text-shadow: 0px 0px 4px #ffffff;
     user-select: text;
+    margin: 0;
+}
+.class p{
+    margin: 0;
 }
 
 .active {
