--- a/src/app/datetime/datetime.css
+++ b/src/app/datetime/datetime.css
@@ -7,6 +7,14 @@
 }
 
 .datetime h2{
+    font-weight: 100;
     font-size: 3rem;
     margin-bottom: -12px;
+    margin: 0 0  -12px 0;
+    padding: 0;
+}
+.datetime h3{
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
 }
