--- a/src/app/navigate/navigate.css
+++ b/src/app/navigate/navigate.css
@@ -29,8 +29,9 @@ a{
 .face{
     display: block;
     border-radius: 20px;
-    padding: 7px 0px;
+    padding: 9px 0px;
     font-size: 1rem;
+    font-family: QuickSandLight;
     background-color: #2b7df8;
     border: 1px solid #75acff;
     box-shadow: 0px 0px 20px #2b7df8b8;
