--- a/src/pages/Section.css
+++ b/src/pages/Section.css
@@ -34,7 +34,7 @@ h1{
   text-align: center;
   font-size: 1.5rem;
   font-weight: 100;
-  font-family: QuicksandRegular, "Roboto Light", sans-serif;
+  font-family: QuicksandLight, "Roboto Light", sans-serif;
   text-shadow: 0px 0px 10px #ffffff;
   user-select: text;
 }
@@ -74,6 +74,7 @@ body {
 .datetime-batch-container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   margin: 2.5vh auto;
+  margin-bottom: 20px;
 }
