home and new pages

--- a/client/src/app/newTimeTable/newTimeTable.css
+++ b/client/src/app/newTimeTable/newTimeTable.css
@@ -1,9 +1,8 @@
 .newTimeTable-btn{
     color: white;
     background-color: #2b7df8;
-    width: 40px;
-    height: 40px;
+    padding: 10px;
     border: none;
-    border-radius: 20%;
-    font-size: 2rem;
+    border-radius: 20px;
+    font-size: 1rem;
 }
