--- a/client/src/app/navigate/navigate.css
+++ b/client/src/app/navigate/navigate.css
@@ -52,6 +52,7 @@ a{
 .nav-icon{
     background-color: white;
     border: 1px solid white;
+    border-top: none;
     box-shadow: grey 0 6px 0;
     transition: box-shadow 0.1s;
     color: #2b7df8;
