--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -1,14 +1,24 @@
 .newClass{
-    margin: 10px;
     padding: 10px;
 
-    background: rgba(43, 125, 248, 0.272);
-    border-radius: 10px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 5px 5px 20px #00000093;
+    background: #1e5cb8;
+    border-radius: 0px;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid #2b7df8c7;
+    border: 1px solid rgba(255, 255, 255, 0.347);
+    border-bottom: none;
     font-family: QuickSandLight;
+}
+.newClass:first-of-type{
+    margin-top: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.newClass:last-of-type{
+    margin-bottom: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.347);
 }
 
 .newClass input{
@@ -26,4 +36,16 @@
 .newClass input:focus{
     border: 1px solid #2b7df8;
     outline: none;
+}
+.deleteClass-btn{
+    height: 30px;
+    width: 30px;
+    border: none;
+    padding: 2px;
+    background: red;
+    border-radius: 10px;
+}
+.deleteIcon{
+    width: 20px;
+    background: red;
 }
