--- a/client/src/app/newTimeTable/newTimeTable.css
+++ b/client/src/app/newTimeTable/newTimeTable.css
@@ -1,8 +1,12 @@
 .newTimeTable-btn{
     color: white;
-    background-color: #2b7df8;
+    background-color: #159215;
     padding: 10px;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 1rem;
+    font-family: QuickSandRegular;
+}
+.newTimeTable-btn:disabled{
+    background-color: #0f3c80;
 }
