--- a/client/src/pages/New.css
+++ b/client/src/pages/New.css
@@ -1,6 +1,8 @@
 .dayTitle{
     font-size: 2rem;
-    margin: 30px;
+    margin: 20px;
+    text-align: left;
+    text-shadow: none;
 }
 .ttNameField{
     margin: 10px;
@@ -13,13 +15,12 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: none;
-    border-left: 6px solid #2b7df8c7;
+    border-bottom: 6px solid #2b7df8c7;
     transition : border-left 300ms linear;
     font-family: QuickSandLight;
     font-size: 1.5rem;
 }
 .ttNameField:focus{
-    border-left: 16px solid #2b7df8;
     outline: none;
 }
 input::placeholder{
@@ -28,4 +29,11 @@ input::placeholder{
 }
 input[type=time]{
     text-shadow: none;
+}
+.newClass-btn{
+    background: #2b7df8;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
 }
