--- a/client/src/app/classList/classList.css
+++ b/client/src/app/classList/classList.css
@@ -10,6 +10,12 @@
     border-radius: 10px;
     padding: 1px 10px 10px 10px;
     perspective: 1000px;
+
+    text-align: left;
+}
+
+.classList-container{
+    height: 70vh;
 }
 
 .noclass{
