--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -30,7 +30,6 @@ a{
 
 h1{
   margin: 0;
-  margin-top: 10px;
   text-align: center;
   font-size: 1.5rem;
   font-weight: 100;
@@ -43,6 +42,7 @@ h1{
 }
 .title {
   font-size: 2rem;
+  margin: 20px;
 }
 
 a{
@@ -82,8 +82,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2.5vh auto;
-  margin-bottom: 20px;
 }
 .carousel{
   -webkit-tap-highlight-color: transparent;
