--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -2,8 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    background: #1e5cb8;
+    padding: 5px;
+    background: #1e5cb88f;
+    margin-left: 10px;
+    margin-right: 10px;
     border: 1px solid rgba(255, 255, 255, 0.347);
     border-bottom: none;
     font-family: QuickSandLight;
