--- a/client/src/app/updateTimeTable/updateTimeTable.css
+++ b/client/src/app/updateTimeTable/updateTimeTable.css
@@ -1,12 +1,16 @@
-.newTimeTable-btn{
+.updateTimeTable-btn{
     color: white;
     background-color: #159215;
     padding: 10px;
+    margin: 10px;
     border: none;
     border-radius: 10px;
     font-size: 1rem;
     font-family: QuickSandRegular;
 }
-.newTimeTable-btn:disabled{
+.updateTimeTable-btn:disabled{
     background-color: #0f3c80;
+}
+.updateTimeTable-btn:hover{
+    background-color: #107710;
 }
