--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -12,10 +12,11 @@
   }
 }
 
-*{
+* {
   user-select: none;
 }
-*::selection{
+
+*::selection {
   color: #2b7df8;
   background-color: white;
 }
@@ -24,11 +25,11 @@ input,
 textarea,
 button,
 select,
-a{
-    -webkit-tap-highlight-color: transparent;
+a {
+  -webkit-tap-highlight-color: transparent;
 }
 
-h1{
+h1 {
   margin: 0;
   text-align: center;
   font-size: 1.5rem;
@@ -37,15 +38,17 @@ h1{
   text-shadow: 0px 0px 10px #ffffff;
   user-select: text;
 }
-.timetable-container{
+
+.timetable-container {
   height: 95vh;
 }
+
 .title {
   font-size: 2rem;
   margin: 20px;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -62,7 +65,7 @@ a{
   text-decoration: underline;
 }
 
-.info a:hover{
+.info a:hover {
   color: lightblue;
   transition: color 300ms linear;
   text-shadow: none;
@@ -70,19 +73,40 @@ a{
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
-.datetime-batch-container {
+.date-edit-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
-.carousel{
+
+.carousel {
   -webkit-tap-highlight-color: transparent;
+}
+
+.edit-btn {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+
+.edit-btn p {
+  font-size: 1.2rem;
+  font-family: QuicksandRegular, "Roboto Medium", sans-serif;
+}
+.edit-btn p:hover {
+  color: #2b7df8;
+}
+
+.edit-icon {
+  width: 20px;
+  margin: 10px;
+}
+.edit-icon:hover {
+  color: #2b7df8;
 }
