--- a/client/src/pages/update-pages/Update.css
+++ b/client/src/pages/update-pages/Update.css
@@ -54,6 +54,19 @@
     background: none;
     border-radius: 10px;
     border: 1px solid rgb(60, 60, 60);
+    margin: 10px;
+    margin-bottom: 20px;
+}
+.description{
+    width: 300px;
+    height: 100px;
+    font-size: 1rem;
+    background: none;
+    border-radius: 10px;
+    border: 1px solid rgb(60, 60, 60);
+    margin: 10px;
+    padding: 10px;
+    color: white;
 }
 .update2-container{
     width: 100vw;
