--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -12,13 +12,12 @@
     font-family: QuickSandLight;
 }
 .newClass:first-of-type{
-    margin-top: 20px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-top: 1px solid rgba(255, 255, 255, 0.347);
 }
 .newClass:last-of-type{
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.347);
@@ -30,6 +29,7 @@
     flex-direction: column;
 }
 .newClass input[type="text"]{
+    max-width: 40%;
     background-color: #00000000;
     border: none;
     border-radius: 10px;
@@ -52,12 +52,12 @@
     padding: 2px;
 }
 .startTimeField{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .endTimeField{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 .deleteClass-btn{
     height: 60px;
