--- a/client/src/pages/update-pages/Update.css
+++ b/client/src/pages/update-pages/Update.css
@@ -95,12 +95,20 @@
     margin-left: 10px;
     margin-right: 10px;
     border: 1px solid rgb(60, 60, 60);
-    border-radius: 10px;
+    border-radius: 5px;
     background: none;
     color: white;
     font-size: 1rem;
     font-family: QuickSandLight;
     transition: background-color 0.1s;
+}
+.new-navbuttons .prev-btn{
+    margin-right: 2px;
+    border-top-left-radius: 15px;
+}
+.new-navbuttons .next-btn{
+    margin-left: 2px;
+    border-top-right-radius: 15px;
 }
 .new-navbuttons button:active{
     color: rgba(255, 255, 255, 0.5);
