--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -46,6 +46,7 @@
     outline: none;
 }
 .newClass input[type="time"]{
+    max-width: 60px;
     color: white;
     background-color: #000000;
     border: 1px solid rgb(60, 60, 60);
