--- a/client/src/app/newTimeTable/newTimeTable.css
+++ b/client/src/app/newTimeTable/newTimeTable.css
@@ -2,6 +2,7 @@
     color: white;
     background-color: #159215;
     padding: 10px;
+    margin: 10px;
     border: none;
     border-radius: 10px;
     font-size: 1rem;
