--- a/client/src/pages/update-pages/Update.css
+++ b/client/src/pages/update-pages/Update.css
@@ -17,7 +17,7 @@
 }
 .labels{
     margin-left: 15px;
-    color: rgba(255, 255, 255, 0.5);
+    color: #ffffff80;
 }
 .info-paragraph{
     font-size: .8rem;
@@ -32,15 +32,6 @@
     width: 100vw;
     height: 80vh;
 }
-.editCodeField{
-    width: 300px;
-    background: none;
-    border: 1px solid rgb(60, 60, 60);
-}
-.editCodeField:focus{
-    border: 2px solid #2b7df8;
-}
-
 
 
 
@@ -54,15 +45,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: left;
-}
-.ttNameField{
-    width: 300px;
-    font-size: 1.4rem;
-    background: none;
-    border-radius: 10px;
-    border: 1px solid rgb(60, 60, 60);
-    margin: 10px;
-    margin-bottom: 20px;
 }
 .description{
     width: 300px;
