--- a/client/src/app/classList/classList.css
+++ b/client/src/app/classList/classList.css
@@ -10,6 +10,10 @@
     padding: 1px 10px 10px 10px;
     text-align: left;
     transition: transform 0.5s;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .classList-container{
