new update page to delete events

--- a/client/src/pages/update-pages/Update.css
+++ b/client/src/pages/update-pages/Update.css
@@ -57,6 +57,13 @@
     justify-content: center;
     align-items: center;
 }
+.update4-container{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .update-btn-container{
     width: 100%;
     display: flex;
