--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -41,6 +41,21 @@ h1 {
 
 .timetable-container {
   height: 95vh;
+  background-image: 
+  linear-gradient(to right, rgba(128, 128, 128, 0.4) 1px, transparent 1px),
+  linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
+  box-shadow: inset 0 0 900px black,inset 0 0 900px black,inset 0 0 900px black;
+  background-size: 40px 40px;
+  animation: moveBackground 1s linear infinite; 
+}
+
+@keyframes moveBackground {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 0 40px;
+  }
 }
 
 .title {
@@ -99,6 +114,7 @@ body {
   font-size: 1.2rem;
   font-family: QuicksandRegular, "Roboto Medium", sans-serif;
 }
+
 .edit-btn p:hover {
   color: #2b7df8;
 }
@@ -107,6 +123,7 @@ body {
   width: 20px;
   margin: 10px;
 }
+
 .edit-icon:hover {
   color: #2b7df8;
 }
