--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -46,7 +46,8 @@ h1 {
   linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
   box-shadow: inset 0 0 900px black,inset 0 0 900px black,inset 0 0 900px black;
   background-size: 40px 40px;
-  animation: moveBackground 1s linear infinite; 
+  /* animation: moveBackground 1s linear infinite;  */
+  /* removed for performance issues */
 }
 
 @keyframes moveBackground {
