--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -122,7 +122,7 @@ body {
 }
 
 .rotate {
-  animation: rotation 200ms 1 linear;
+  animation: rotation 200ms infinite linear;
 }
 
 @keyframes rotation {
