--- a/client/src/pages/new-pages/New.css
+++ b/client/src/pages/new-pages/New.css
@@ -10,6 +10,10 @@
     width: 100vw;
     height: 80vh;
 }
+.new4-container{
+    width: 100vw;
+    height: 80vh;
+}
 .newClass-btn{
     background: #2b7df8;
     color: white;
