--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -80,3 +80,26 @@ img.deleteIcon{
     height: 30px;
     background: rgb(255, 55, 55);
 }
+
+select{
+    width: 100%;
+    outline: none;
+    font-size: 1.5rem;
+    background: none;
+    color: white;
+    padding: 2px;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.11);
+    margin-left: 5px;
+    margin-right: 5px;
+}
+select:focus{
+    border: 1px solid #2b7df8;
+    font-weight: bold;
+}
+option{
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 1.5rem;
+    font-family: QuickSandLight;
+}
