--- a/client/src/app/class/class.css
+++ b/client/src/app/class/class.css
@@ -83,7 +83,7 @@
 .classButtons button {
     width: 50%;
     height: 100%;
-    background-color: rgb(225, 77, 77);
+    background-color: black;
     color: white;
 
     border: none;
