--- a/client/src/pages/update-pages/Update.css
+++ b/client/src/pages/update-pages/Update.css
@@ -69,6 +69,14 @@
     align-items: center;
 }
 
+.update5-container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .update-btn-container {
     width: 100%;
     display: flex;
