--- a/client/src/app/class/class.css
+++ b/client/src/app/class/class.css
@@ -43,7 +43,6 @@
     font-family: QuickSandRegular;
     font-size: 1rem;
     font-weight: 100;
-    text-shadow: 0px 0px 4px #ffffff;
     user-select: text;
     margin: 0;
 }
@@ -84,16 +83,24 @@
 }
 .classButtons button {
     height: 100%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.648);
     color: white;
 
     border: none;
     padding: 5px;
 }
-
+.eventBox{
+    background-color: rgb(243, 232, 213);
+    padding: 10px;
+    border-radius: 10px;
+    margin: 5px;
+}
 .event{
     font-size: .6rem;
-    color: white;
+    color: black;
+    font-weight: bold;
+    padding-left: 20px;
+    margin: 0px;
 }
 
 .extraClass{
