--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,19 +1,47 @@
-h1{
-    font-size: 2rem;
-}
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 60px;
-}
 .newTimeTable{
     color: white;
-    text-shadow: 0px 0px 5px #ffffff;
-    background-color: #2b7df8c1;
+    background-color: #159215;
     border: 1px solid rgba(255, 255, 255, 0.525);
-    padding: 10px;
-    border-radius: 20px;
+    padding: 6px;
+    border-radius: 5px;
     font-size: 1rem;
+}
+.recentlHeading{
+    font-family: QuickSandRegular;
+    font-size: 1.5rem;
+    margin: 0;
+    background: linear-gradient(90deg, white 0%, #159215 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.recentlyViewed{
+    min-width: auto;
+    margin: 10px;
+    padding: 10px;
+    background: #2b7df800;
+    /* blur */
+    backdrop-filter: blur(100px);
+    border: 1px solid rgba(255, 255, 255, 0.518);
+    cursor: pointer;
+    border-radius: 5px;
+    -webkit-tap-highlight-color: transparent;
+    transition: all 0.1s;
+}
+.recentlyViewed:hover{
+    background: rgba(255, 255, 255, 0.284);
+}
+.recentlyViewedContainer {
+    padding: 10px;
+    padding-bottom: 20px;
+    animation: gradientAnimation 1s infinite;
+    background: radial-gradient(ellipse at 284px 210px, #15921473, transparent), radial-gradient(ellipse at 0px 160px, #2b7df88c, transparent);
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background: radial-gradient(ellipse at 284px 210px, #15921473, transparent), radial-gradient(ellipse at 0px 160px, #2b7df88c, transparent);
+    }
+    100% {
+        background: radial-gradient(ellipse at 284px 210px, #92141473, transparent), radial-gradient(ellipse at 0px 160px, #2b7df88c, transparent);
+    }
 }
