--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -29,8 +29,21 @@
     -webkit-tap-highlight-color: transparent;
     transition: all 0.1s;
 }
+.textFade{
+    width: 100%;
+    height: 100%;
+    -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+}
 .recentlyViewed:hover{
     background-color: rgba(255, 255, 255, 0.284);
+}
+.recentlyViewed:before{
+    content:'';
+    width:100%;
+    height:100%;    
+    position:absolute;
+    left:0;
+    top:0;
 }
 .recentlyViewedContainer {
     padding-bottom: 20px;
