--- a/client/src/app/newClass/newClass.css
+++ b/client/src/app/newClass/newClass.css
@@ -65,12 +65,9 @@
     border-bottom-right-radius: 5px;
 }
 .deleteClass-btn{
-    height: 60px;
-    width: 60px;
-    border: none;
-    padding: 2px;
+    padding: 5px;
     margin-left: 5px;
-    background: transparent;
+    margin-right: 5px;
 }
 img.deleteIcon{
     width: 30px;
