--- a/client/src/app/updateTimeTable/updateTimeTable.css
+++ b/client/src/app/updateTimeTable/updateTimeTable.css
@@ -7,6 +7,8 @@
     border-radius: 10px;
     font-size: 1rem;
     font-family: QuickSandRegular;
+    display: flex;
+    justify-content: center;
 }
 .updateTimeTable-btn:disabled{
     background-color: #0f3c80;
