--- a/client/src/app/class/class.css
+++ b/client/src/app/class/class.css
@@ -26,14 +26,29 @@
 .class {
     width: 100%;
     margin-top: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
 
-    background: rgba(43, 125, 248, 0.272);
+    /* background: rgba(43, 125, 248, 0.272); */
     border-radius: 10px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 5px 5px 20px #00000093;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid #2b7df8c7;
+    /* border: 1px solid #2b7df8c7; */
+    font-family: QuickSandLight;
+    
+    transition: all 0.5s;
+}
+.classSimple{
+    width: 100%;
+    margin-top: 10px;
+    /* overflow: hidden; */
+
+    /* background: rgba(43, 125, 248, 0.272); */
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 5px 5px 20px #00000093;
+    backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px);
+    /* border: 1px solid #2b7df8c7; */
     font-family: QuickSandLight;
     
     transition: all 0.5s;
@@ -61,7 +76,7 @@
     backdrop-filter: none;
 }
 
-.classButtons{
+.classButtons, .classButtonsSimple{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -74,7 +89,18 @@
 }
 .classButtons button {
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.648);
+    background-color: rgba(0, 0, 0, 0.635);
+    color: white;
+
+    border: none;
+    padding: 5px;
+}
+.classButtonsSimple > *{
+    flex: 1 1 auto;
+}
+.classButtonsSimple button{
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
     color: white;
 
     border: none;
