--- a/client/src/app/classList/classList.css
+++ b/client/src/app/classList/classList.css
@@ -15,6 +15,25 @@
     flex-direction: column;
     align-items: center;
 }
+.classListSimple{
+    width: 70%;
+    margin: 2vw auto;
+    margin-top: 5px;
+    /* background: radial-gradient(circle,#2b7df8b8 -30%, #99bdefd7 0%, #2b7df8b8 30%); */
+    background-size: 400% 400%;
+    animation: gradientAnimation 10s ease infinite;
+    /* box-shadow: 0px 0px 20px #2b7df8b8; */
+    border: 1px solid rgba(255, 255, 255, 0.317);
+    backdrop-filter: blur(1px);
+    border-radius: 10px;
+    padding: 1px 10px 10px 10px;
+    text-align: left;
+    transition: transform 0.5s;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .classList-container{
     perspective: 1000px;
@@ -41,6 +60,14 @@
     transform-style: preserve-3d;
 }
 .classList.right{
+    transform: translateX(-35%) rotateY(-30deg) translateY(10%);
+    transform-style: preserve-3d;
+}
+.classListSimple.left{
+    transform: translateX(35%) rotateY(30deg) translateY(10%);
+    transform-style: preserve-3d;
+}
+.classListSimple.right{
     transform: translateX(-35%) rotateY(-30deg) translateY(10%);
     transform-style: preserve-3d;
 }
