--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -4,14 +4,6 @@
   --background-end-rgb: 0, 0, 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 * {
 }
 
@@ -39,7 +31,7 @@ h1 {
 }
 
 .timetable-container {
-  height: 95vh;
+  height: 100vh;
   background-image: 
   linear-gradient(to right, rgba(128, 128, 128, 0.4) 1px, transparent 1px),
   linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
@@ -47,6 +39,14 @@ h1 {
   background-size: 40px 40px;
   /* animation: moveBackground 1s linear infinite;  */
   /* removed for performance issues */
+}
+.timetable-container-paper {
+    background-color: white;
+    background-image: 
+    linear-gradient(to right, rgba(128, 128, 128, 0.4) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
+    box-shadow: inset 0 0 900px rgba(0, 0, 0, 0.509),inset 0 0 900px rgba(0, 0, 0, 0.164),inset 0 0 1500px rgba(0, 0, 0, 0.655);
+    background-size: 40px 40px;
 }
 
 @keyframes moveBackground {
