--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -41,7 +41,7 @@ h1 {
   /* removed for performance issues */
 }
 .timetable-container-paper {
-    background-color: white;
+    background-color: rgb(194, 194, 194);
     background-image: 
     linear-gradient(to right, rgba(128, 128, 128, 0.4) 1px, transparent 1px),
     linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
