--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+:root {
+    --foreground-rgb: 255, 255, 255;
+    --background-rgb: 0, 0, 0;
+    --paper-rgb: 243, 232, 213;
+}
+  
 body{
     padding: 0px;
 }
@@ -10,7 +16,7 @@ html{
 .info-paragraph{
     font-size: .8rem;
     padding: 0 15px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(var(--foreground-rgb), 0.5);
 }
 .datepicker{
     width: 60%;
