--- a/client/src/app/timetableCreator/timetableCreator.css
+++ b/client/src/app/timetableCreator/timetableCreator.css
@@ -12,7 +12,7 @@
     border: 1px solid rgb(60, 60, 60);
     border-radius: 5px;
     background: none;
-    color: white;
+    color: rgb(var(--foreground-rgb));
     font-size: 1rem;
     font-family: QuickSandLight;
     transition: background-color 0.1s;
@@ -46,12 +46,9 @@
 }
 .editingSpecificDatebtn{
     background: none;
-    color: white;
+    color: rgb(var(--foreground-rgb));
     font-size: 0.7rem;
     padding: 11px;
     margin: 0;
     border: none;
-}
-.editingSpecificDatebtn:active{
-    color: rgba(255, 255, 255, 0.5);
 }
