--- a/client/src/pages/TimeTable.css
+++ b/client/src/pages/TimeTable.css
@@ -1,12 +1,3 @@
-:root {
-  --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 0, 0, 0;
-  --background-end-rgb: 0, 0, 0;
-}
-
-* {
-}
-
 *::selection {
   color: #2b7df8;
   background-color: white;
@@ -45,7 +36,7 @@ h1 {
     background-image: 
     linear-gradient(to right, rgba(128, 128, 128, 0.4) 1px, transparent 1px),
     linear-gradient(to bottom, rgba(128, 128, 128, 0.4) 1px, transparent 1px);
-    box-shadow: inset 0 0 900px rgba(0, 0, 0, 0.509),inset 0 0 900px rgba(0, 0, 0, 0.164),inset 0 0 1500px rgba(0, 0, 0, 0.655);
+    box-shadow: inset 0 0 900px rgba(0, 0, 0, 0.251),inset 0 0 900px rgba(0, 0, 0, 0.164),inset 0 0 1500px rgba(0, 0, 0, 0.242);
     background-size: 40px 40px;
 }
 
@@ -87,9 +78,7 @@ a {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background: rgb(var(--background-rgb));
 }
 
 .date-edit-container {
