--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -53,17 +53,17 @@
     left:0;
     top:0;
 }
-.recentlyViewedContainer {
-    padding-bottom: 20px;
-
-}
 .dottedgrid{
-    animation: moveup 1s linear infinite;
-    transition: all 1s;
+    animation: moveup 5s linear infinite;
     border: rgba(var(--foreground-rgb),0.5) 1px solid;
+    background-color: rgba(255, 255, 255, 0.116);
+    box-shadow: inset 0 0 10px rgb(0, 0, 0), 
+                inset 0 0 100px rgb(0, 0, 0), 
+                inset 0 0 100px rgba(0, 0, 0);
 }
 .homePage-paper .dottedgrid{
-    background-color: rgb(var(--paper-rgb))
+    background-color: rgb(var(--paper-rgb));
+    box-shadow: none;
 }
 @keyframes moveup {
     0% {
